--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
 
+    compile("io.jsonwebtoken:jjwt:0.9.1")
+
     compileOnly('org.springframework.boot:spring-boot-configuration-processor')
     kapt('org.springframework.boot:spring-boot-configuration-processor')
 
