--- a/src/main/resources/application-db-local.yml
+++ b/src/main/resources/application-db-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/springdb
-    username: springuser
-    password: 1234
+    username: root
+    password: password
 
