--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,7 @@
 spring.profiles.include: db-local
 
+debug: true
+
 spring:
   jpa:
     show-sql: true
@@ -8,3 +10,5 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+logging.level.org.hibernate.type.descriptor.sql: trace
